--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>Hello World</h1>
-
-</body>
+  <body>
+    <h1>Hello World</h1>
+  </body>
 </html>
+<script type="module" src="/src/app.ts"></script>
