--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" type="text/css" href="/style.css" media="”screen”" />
+</head>
 <html>
   <body>
-    <h1>Hello World</h1>
+    <div id="world"></div>
+    <div id="instructions">
+      Press and drag to make wind<br /><span class="lightInstructions"
+        >the lion will surely appreciate</span
+      >
+    </div>
   </body>
 </html>
 <script type="module" src="/src/app.ts"></script>
